# serializer version: 1
# name: TestTestResult.test_to_json_line_snapshot
  '{"node_id":"tests/test_a.py::test_ok","outcome":"passed","duration_seconds":0.005,"timestamp":"2026-01-01T00:00:00+00:00","longrepr":null,"worker":null}'
# ---
# name: TestTestResult.test_to_json_line_snapshot.1
  '{"node_id":"tests/test_a.py::test_fail","outcome":"failed","duration_seconds":0.123,"timestamp":"2026-01-01T00:00:00+00:00","longrepr":"assert 1 == 2","worker":null}'
# ---
# name: TestTestResult.test_to_json_line_snapshot.2
  '{"node_id":"tests/test_a.py::test_skip","outcome":"skipped","duration_seconds":0.0,"timestamp":"2026-01-01T00:00:00+00:00","longrepr":null,"worker":null}'
# ---
